Fixed the size of hero widget on mobile, hoperfully.

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -121,7 +121,6 @@ body {
   transform: translateY(-50%) scale(0.95); /* Shrinks slightly when clicked */
 }
 
-/* Button Base Styles */
 .widget-btn {
     display: inline-flex;     /* Keeps icon and text on the same line */
     align-items: center;      /* Vertically centers icon and text */
@@ -159,7 +158,7 @@ body {
 
 .product-grid-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, 460px) ;
+    grid-template-columns: 100%;
     gap: 2rem; 
     margin: 4rem auto;
     padding: 0;  
@@ -187,5 +186,8 @@ body {
 @media (min-width: 768px) {
     .widget-actions {
         flex-direction: row !important;
+    }
+    .product-grid-container {
+        grid-template-columns: repeat(auto-fit, 460px)
     }
 }
